# Cafe.Environment

./: CMakeLists.txt  Readme.md  conanfile.py
include/Cafe/Misc/: Environment.h
src/: Environment.cpp
src/Cafe/Misc/: Environment.cpp  Environment.h
